assets/css/rtl-basic.css
/* ... */
.esign-arrow.top:after 
{
    bottom: -20px;
    top: auto;
}



/* esig document top part */

.esig_header_top
{
    margin-top:20px;
    display:inline-block;
    position:relative;
    width:100%;
}

.esig_top_left 
{   
    position:relative;
    float:left;
    display:inline-block ; 
    width:65% ;
} 

.esig_top_right
{ 
    position:relative;
    float:left;
    display:inline-block ;  
    width:35% ; 
    margin-top: 20px;
    margin-bottom: 10px;
} 


.col-sm-8
{
    max-width:345px;
    padding-left:0px !important;
}

.eisg-rtl-legally-signed{
    float: right !important;
    
}

.rtl-clearfix-history
{
    top:40px;
   
}

.rtl-site-name{
    float: left !important;
    direction: rtl;
}

#audit-trail-wrapper .main .info .sign{
    position: absolute;
    left:1px;
}

#audit-trail-wrapper .main .info .user{
    position: absolute;
    right:1px;  
}

.rtl-weapper{
    position: absolute;
    right:-10px;    
}

.rtl-weapper-text{
    position: relative;
    left:150px;   
}

#audit-trail-wrapper .main .info .bio{
    position: relative;
    left:290px;    
}

#audit-trail-wrapper .document-info .left{
    position: relative;
    left:250px;   
}

.rtl-sign-contracts{
    position: relative;
    right:560px;     
}

#audit-trail-wrapper .main .checksum {
    position: relative;
    bottom: -50px;   
}

#audit-trail-wrapper .main .clearfix {
    position: relative;
    
}

#esign_click_submit{

    /*
    position: absolute;
    left: 7%;  
    */
}


.esig-template-page .sig-tooltip.active 
{
    margin-top: -10px !important;
    min-width: 290px;
    left: 13px;

}

.instructions{
    position: relative;
    left:-10px;
}

.blog-url{
    position: relative;

    bottom: 15px;
    text-align: right;
    float:right;
}


.pull-right{
    position: relative;
    bottom: 15px;
    text-align: left;
    float:left;
   
}


.page-break-before .esig-sitename
{

    text-shadow: none;
    position: relative;
    right:10px;
    top:10px;
}

.agree-container .esig-sitename
{
    text-shadow: none;
    position: relative;
    left:750px;
}
.sig-tooltip.active {
    right: -100px !important;
}


/* audit trail pdf Document */

.document-sign-page #audit-trail-wrapper{
    margin-right: -30px;
    margin-left: -30px;
}

#audit-trail-wrapper{
    font-family: "Open Sans", "sans-serif","chinese-msyh";
    color: #575759;
    max-width: 800px;
    overflow : none;
}

#audit-trail-wrapper .right{
    float: left;
}

#audit-trail-wrapper .left{
    margin-right: 0px;
    float: right;
}

#audit-trail-wrapper .clearfix{
    clear: both;
}

#audit-trail-wrapper img {
    max-width: 100%;
    height: auto;
}

#audit-trail-wrapper .header {
    margin-bottom: 40px;
}

#audit-trail-wrapper .header,
#audit-trail-wrapper .main {
    margin: 10px;
}

#audit-trail-wrapper .header .caption {
    font-size: 26px;
    margin-bottom: 0px;
}

#audit-trail-wrapper .document-info{
    padding-bottom: 5px;
    width: 100%;
}

#audit-trail-wrapper .document-info .left{
    width: 475px;
}

#audit-trail-wrapper .document-name{
    font-size: 16px;
    margin-top: -5px;
    margin-bottom: 1px;
}

#audit-trail-wrapper .document-name span{
    display: inline-block;
    width: 330px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    vertical-align: bottom;
}

#audit-trail-wrapper .header .subcaption {
    margin-bottom: 40px;
    font-size: 13px;
}

#audit-trail-wrapper .header .subcaption .image-wrapper{
    padding-left: 5px;
}

#audit-trail-wrapper .header .subcaption img {
    margin-top: -5px;
    width: 11px;
}

#audit-trail-wrapper .header .subcaption span {
    text-transform: uppercase;
    font-size: 13px;
}

#audit-trail-wrapper .header .right {
    font-weight: bold;
    text-align: left;
}
#audit-trail-wrapper .main .info {
    display:block;
    position: relative;
}
#audit-trail-wrapper .main .info .user{
    width: 96px;
}

#audit-trail-wrapper .main .info .user img{
    border: 2px solid #EAEAEA;
    padding: 0px;
    max-width: 85px;
}

#audit-trail-wrapper .main .info .bio {
    padding-right: 50px;
    margin-top: -4px;
    width: 370px;
    box-sizing: border-box;
}

#audit-trail-wrapper .main .info .bio div:first-child {
    font-size: 18px;
}

#audit-trail-wrapper .main .row {
    margin-bottom: 15px;
}

#audit-trail-wrapper .main .info .bio div {
    font-size: 12px;
    font-weight: 100;
}

#audit-trail-wrapper .digital-signature-caption{
    padding-bottom: 10px;
    font-weight: bold;
}

#audit-trail-wrapper .main .info .sign {
    border: 3px solid #eaeaea;
    padding: 10px;
    font-size: 12px;
    width: 235px;
    text-align: right;
    color: #989898;
}

#audit-trail-wrapper .sign-text-pdf span{
    line-height: 33px;
}

#audit-trail-wrapper .empty-signature{
    background: #eaeaea !important;
    margin: -10px;
    font-size: 18px;
    padding: 29px;
    text-align: center;
}

#audit-trail-wrapper .main .checksum {
    background: #eaeaea !important;
    padding: 5px;
    min-height: 45px;
    display:block;
    position: relative;
    top:90px !important;
}

#audit-trail-wrapper .main .checksum .col {
    font-size: 13px;
}

#audit-trail-wrapper .main .checksum .left {
    margin-letf: 20px;

}

#audit-trail-wrapper .signer-view{
    margin-top: 60px;
}

#audit-trail-wrapper .signer-view:first-child{
    margin-top: 0px;
}

#audit-trail-wrapper .main .checksum .checksum-caption{
    width: 190px;
    float:right;
}


#audit-trail-wrapper .main .checksum .code {
    font-weight: bold;
    padding-top: 11px;
    width: 241px;
    float:right;
}

#audit-trail-wrapper .main .checksum .right {
    width: 210px;
    margin-top: 1px;
    background-color: #fff !important;
    float:left;

}

#audit-trail-wrapper .main .history table {
    font-size: 14px;
    margin-top: 50px;
}

#main-signature .form-inline div {
    float: right;
}

table td,
table th {
    text-align: right;
}
table.layout {
    width: 100%;
    border-collapse: collapse
}
/* ... */

